--- a/semana3/sistema-loja/style3.css
+++ b/semana3/sistema-loja/style3.css
@@ -17,31 +17,6 @@ h1 {
      
 }
 
-h2 {
-    color: black;
-    margin: 10px 10px 10px;
-    display: block;
-    text-align: center;
-    font-family: system-ui;
-    
-}
-
-h3 {
-    text-align: center;
-    margin: 20px;
-    padding: 10px;
-    font-family: system-ui;
-}
-
-h4 {
-    font-family: system-ui;
-    text-align:right;
-}
-
-p {
-    margin: 30px;
-}
-
 a {
     margin: 10px 10px 10px;
     display: block;
@@ -53,22 +28,38 @@ a:hover {
     color:rgb(245, 17, 112) 
 }
 
-img {
-    width: 6%;
-    position: relative;
-    left: 80%;
+h2 {
+    color: black;
+    margin: 10px 10px 10px;
+    display: block;
+    text-align: center;
+    font-family: system-ui;
     
 }
 
-
-
-
-label, input {
-    margin: 20px;
+div {
     text-align: center;
+    margin: 20px;
+    padding: 10px;
+    font-family: system-ui;
 }
 
-li, h2 {
-    margin: 15px;
+button {
+    background-color:rgb(245, 17, 112);
+    margin: 20px;
+    padding: 20px;
+    font-size: 20px;
+    font-family: system-ui;
+}
+
+button:hover {
+    background-color:darksalmon;
+    color: black;
+    cursor: pointer;
+}
+
+label, input {
+    font-family: system-ui;
+    font-size: 18px;
 }
 
