--- a/semana3/bugfixes/exercicio-bugfixes/index.css
+++ b/semana3/bugfixes/exercicio-bugfixes/index.css
@@ -18,7 +18,9 @@ h2 {
 
 input {
     height: 20px;
-    width: 500px;
+    width: 700px;
+    margin: auto;
+    border-block-start: unset;
 }
 
 button:focus {
