--- a/semana4/flex-grid/style.css
+++ b/semana4/flex-grid/style.css
@@ -1,7 +1,8 @@
 header {
     background-color:mediumvioletred ;
     display: flex;
-    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
     padding: 10px;
     height: 50px;
 }
